--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="google.com">file1.jar</a></li>
-        <li><del>file2.jar</del></li>
-    </ul>
+    <div name="mcd">
+        <a href="google.com">file1.jar</a>
+        <del>file2.jar</del>
+    </div>
 </body>
 </html>
