--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div name="mcd">
-        <a href="google.com">file1.jar</a>
+    <div name='mcd'>
+        <a href='google.com'>file1.jar</a>
         <del>file2.jar</del>
     </div>
 </body>
